--- a/app/assets/css/starter.css
+++ b/app/assets/css/starter.css
@@ -228,3 +228,6 @@ div.required label.control-label:after {
     content: " *";
     color: red;
 }
+.modal-my-photos {
+    overflow-y: scroll;height: 350px;overflow-x: hidden;
+}
