--- a/themes/keen/assets/assets/css/keen.css
+++ b/themes/keen/assets/assets/css/keen.css
@@ -1,3 +1,17 @@
+#kt_quick_panel::-webkit-scrollbar {
+    width: 5px;
+}
+#kt_quick_panel::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2); 
+    border-radius: 10px;
+}
+
+#kt_quick_panel::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,24%); 
+}
+
+
 th {
     text-transform: uppercase;
 }
